Update and rename 35.aspect-ratiofilter.css to 35.aspect-ratio,filter.css

--- a/35.aspect-ratio,filter.css
+++ b/35.aspect-ratio,filter.css
@@ -17,4 +17,10 @@ opacity()
 saturate()
 sepia()
 
+ASPECT-RATIO
+
+The aspect-ratio property allows you to define the ratio between width and height of an element.
+
+If aspect-ratio and width properties are set, the height will follow in the defined aspect ratio.
+
 */
